[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://Scripts/DialogueSystem.gd" id="1_dialogue"]

[node name="DialogueSystem" type="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_dialogue")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -500.0
offset_top = -220.0
offset_right = 500.0
offset_bottom = -30.0
grow_horizontal = 2
grow_vertical = 0

[node name="NameLabel" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 20.0
offset_top = -40.0
offset_right = 220.0
offset_bottom = -5.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 20
text = "ชื่อตัวละคร"

[node name="TextLabel" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 30.0
offset_top = 30.0
offset_right = -30.0
offset_bottom = -30.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 22
text = "ข้อความเนื่อเรื่องจะปรากฏที่นี่..."
autowrap_mode = 2

[node name="NextIndicator" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -150.0
offset_top = -40.0
offset_right = -20.0
offset_bottom = -10.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 14
text = "กดเพื่อข้าม >"
horizontal_alignment = 2
